{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 18,
  "lineage": "6b74f37c-6499-50d7-e5d7-9edb098c5f2e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkInterfaces/jeremy-nic-private-vm",
            "internal_domain_name_suffix": "l5qcn2wuux3ujddsvcnziurabh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-private"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "jeremy-nic-private-vm",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "jeremy-rg"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkInterfaces/jeremy-nic-public-vm",
            "internal_domain_name_suffix": "l5qcn2wuux3ujddsvcnziurabh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/publicIPAddresses/jeremy-public-vm",
                "subnet_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-public"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-9C-76-B5",
            "name": "jeremy-nic-public-vm",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "jeremy-rg",
            "virtual_machine_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Compute/virtualMachines/jeremy-vm-public"
          },
          "dependencies": [
            "azurerm_public_ip.public_vm",
            "azurerm_resource_group.main",
            "azurerm_subnet.public",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkSecurityGroups/jeremy-nsg-private",
            "location": "eastus",
            "name": "jeremy-nsg-private",
            "resource_group_name": "jeremy-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromPublic",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkSecurityGroups/jeremy-public",
            "location": "eastus",
            "name": "jeremy-public",
            "resource_group_name": "jeremy-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAllOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/publicIPAddresses/jeremy-public-vm",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.167.25",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "jeremy-public-vm",
            "resource_group_name": "jeremy-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-private",
            "name": "subnet-private",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "jeremy-rg",
            "virtual_network_name": "vnet-main"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-public",
            "name": "subnet-public",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "jeremy-rg",
            "virtual_network_name": "vnet-main"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-private",
            "network_security_group_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkSecurityGroups/jeremy-nsg-private",
            "subnet_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-private"
          },
          "dependencies": [
            "azurerm_network_security_group.private",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-public",
            "network_security_group_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkSecurityGroups/jeremy-public",
            "subnet_id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-public"
          },
          "dependencies": [
            "azurerm_network_security_group.public",
            "azurerm_resource_group.main",
            "azurerm_subnet.public",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f226e05f-a5d4-44fb-8c72-a89b9452200f",
            "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main",
            "location": "eastus",
            "name": "vnet-main",
            "resource_group_name": "jeremy-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-public",
                "name": "subnet-public",
                "security_group": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkSecurityGroups/jeremy-public"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/subnet-private",
                "name": "subnet-private",
                "security_group": "/subscriptions/6077fee6-a34f-436e-a381-91464aba65e3/resourceGroups/jeremy-rg/providers/Microsoft.Network/networkSecurityGroups/jeremy-nsg-private"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}